# dictem

./: AUTHORS  COPYING  Makefile.am  NEWS  README  TODO  configure.in  dictem-elisp.el  dictem-ll.el  dictem-opt.el  dictem-prog.el  dictem-vars.el  dictem.1  dictem.el  dictem.in  make_changelog  make_cvsdist  mkinstalldirs
