dnl Process this file with autoconf to produce a configure script for edict.
dnl
dnl Created: Mon Oct 20 17:16:37 2003 by Aleksey Cheusov <vle@gmx.net>
dnl Copyright 2003 Aleksey Cheusov <vle@gmx.net>
dnl
dnl This program is free software; you can redistribute it and/or modify it
dnl under the terms of the GNU General Public License as published by the
dnl Free Software Foundation; either version 2, or (at your option) any
dnl later version.
dnl
dnl This program is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License along
dnl with this program; if not, write to the Free Software Foundation, Inc.,
dnl 675 Mass Ave, Cambridge, MA 02139, USA.
dnl
dnl $Id: configure.in,v 1.1 2003-10-22 03:24:13 cheusov Exp $
dnl

define(VER, "0.0.1")

AC_INIT(edict, VER, [vle@gmx.net])
AM_INIT_AUTOMAKE(edict, VER)
AM_SANITY_CHECK
AC_PREREQ(2.53)
AC_REVISION($Revision: 1.1 $)

#AC_CONFIG_SRCDIR([edict.el])

echo Configuring for edict
echo .

AM_PATH_LISPDIR

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([edict], [chmod +x edict])

AC_OUTPUT

date > stamp-h.in
date > stamp-h
