dnl Process this file with autoconf to produce a configure script for dictem.
dnl
dnl Created: Mon Oct 20 17:16:37 2003 by Aleksey Cheusov <vle@gmx.net>
dnl Copyright 2003 Aleksey Cheusov <vle@gmx.net>
dnl
dnl This program is free software; you can redistribute it and/or modify it
dnl under the terms of the GNU General Public License as published by the
dnl Free Software Foundation; either version 2, or (at your option) any
dnl later version.
dnl
dnl This program is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License along
dnl with this program; if not, write to the Free Software Foundation, Inc.,
dnl 675 Mass Ave, Cambridge, MA 02139, USA.
dnl
dnl $Id: configure.in,v 1.3 2004-06-07 13:36:30 cheusov Exp $
dnl

define(DICTEM_VERSION, "0.0.1")

AC_INIT(dictem, DICTEM_VERSION, [vle@gmx.net])
AM_INIT_AUTOMAKE(dictem, DICTEM_VERSION)
AM_SANITY_CHECK
AC_PREREQ(2.53)
AC_REVISION($Revision: 1.3 $)

#AC_CONFIG_SRCDIR([dictem.el])

echo Configuring for dictem
echo .

AM_PATH_LISPDIR

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([dictem], [chmod +x dictem])

AC_OUTPUT

date > stamp-h.in
date > stamp-h
